@@ -2,6 +2,7 @@
 Version 3.2.3.93 'Marshal West':
 	- SIGHUP for logfile reset implemented
 	(Gustavo Garcia suggestion).
+	- log reset command in CLI added.
 
 06/03/2014 Oleg Moskalenko <mom040267@gmail.com>
 Version 3.2.3.92 'Marshal West':
